docs: actualización del README con explicación de jerarquía y captura de ejecución