@@ -1,18 +1,77 @@
-## Getting Started
+PS C:\Users\ASUS\OneDrive\Escritorio\JAVA\herencia>  & 'C:\Program Files\Java\jdk-24\bin\java.exe' '--enable-preview' '-XX:+ShowCodeDetailsInExceptionMessages' '-cp' 'C:\Users\ASUS\OneDrive\Escritorio\JAVA\herencia\bin' 'App' 
+==== MOTOR ====
+Código: M001
+Fabricante: Bosch
+Cilindros: 4
+Potencia: 120 HP
+El motor ha sido encendido: 120 HP y 4 cilindros.
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+==== TRANSMISIÓN ====
+Código: T001
+Fabricante: ZF
+Tipo: Automática
+Número de marchas: 6
+Marcha actual: 1
+Cambiando de la marcha 1 a la marcha 3...
 
-## Folder Structure
+==== NEUMÁTICO ====
+Código: N001
+Fabricante: Michelin
+Tamaño: 17 pulgadas
+Presión: 32.5 PSI
+Presión óptima.
 
-The workspace contains two folders by default, where:
+==== CHASIS ====
+Código: C001
+Fabricante: Toyota
+Tipo de chasis: Monocasco
+Peso: 250.0 kg
+Carga máxima estimada: 875.0 kg
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+==== SISTEMA DE FRENOS ====
+Código: F001
+Fabricante: Brembo
+Sistema ABS: Sí
+Tipo de discos: Discos ventilados
+Peso del chasis: 0.0 kg
+Carga máxima estimada: 0.0 kg
+Sistema ABS operativo.
+PS C:\Users\ASUS\OneDrive\Escritorio\JAVA\herencia>  c:; cd 'c:\Users\ASUS\OneDrive\Escritorio\JAVA\herencia'; & 'C:\Program Files\Java\jdk-24\bin\java.exe' '--enable-preview' '-XX:+ShowCodeDetailsInExceptionMessages' '-cp' 'C:\Users\ASUS\OneDrive\Escritorio\JAVA\herencia\bin' 'App' 
+==== MOTOR ====
+Código: M001
+Fabricante: Bosch
+Cilindros: 4
+Potencia: 120 HP
+El motor ha sido encendido: 120 HP y 4 cilindros.
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+==== TRANSMISIÓN ====
+Código: T001
+Fabricante: ZF
+Tipo: Automática
+Número de marchas: 6
+Marcha actual: 1
+Cambiando de la marcha 1 a la marcha 3...
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+==== NEUMÁTICO ====
+Código: N001
+Fabricante: Michelin
+Tamaño: 17 pulgadas
+Presión: 32.5 PSI
+Presión óptima.
 
-## Dependency Management
+==== CHASIS ====
+Código: C001
+Fabricante: Toyota
+Tipo de chasis: Monocasco
+Peso: 250.0 kg
+Carga máxima estimada: 875.0 kg
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+==== SISTEMA DE FRENOS ====
+Código: F001
+Fabricante: Brembo
+Sistema ABS: Sí
+Tipo de discos: Discos ventilados
+Peso del chasis: 0.0 kg
+Carga máxima estimada: 0.0 kg
+Sistema ABS operativo.
+PS C:\Users\ASUS\OneDrive\Escritorio\JAVA\herencia> 
